adjustments to build superswap data function

--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -50,6 +50,7 @@
     "\n",
     "hyperlane_relay_url = \"https://offchain-lookup.services.hyperlane.xyz/callCommitments/calls\"\n",
     "hyperlane_relayers = [\"0x74Cae0ECC47B02Ed9B9D32E000Fd70B9417970C5\", \"0x09B96417602Ed6AC76651F7A8c4860E60e3aA6d0\"]\n",
+    "XCHAIN_GAS_LIMIT_UPPERBOUND = 600000\n",
     "\n",
     "base_default_settings = {\n",
     "  \"price_batch_size\": int(os.getenv(\"SUGAR_PRICE_BATCH_SIZE\",\"40\")),\n",
