--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -34,9 +34,11 @@
    "source": [
     "#| export\n",
     "\n",
+    "import copy\n",
     "from dataclasses import dataclass\n",
+    "from sugar.config import XCHAIN_GAS_LIMIT_UPPERBOUND\n",
     "from sugar.quote import Quote, pack_path\n",
-    "from sugar.helpers import apply_slippage, ICACallData, hash_ICA_calls, to_bytes32, to_bytes32_str\n",
+    "from sugar.helpers import apply_slippage, ICACallData, hash_ICA_calls, to_bytes32, to_bytes32_str, MAX_UINT256\n",
     "from sugar.helpers import ADDRESS_ZERO, normalize_address\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPoolForSwap\n",
@@ -380,7 +382,13 @@
     "    xchain_fee: int\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class SuperSwapData: destination_planner: RoutePlanner; calls: List[ICACallData]; origin_domain: int; salt: str; needs_relay: bool "
+    "class SuperSwapData:\n",
+    "    destination_planner: RoutePlanner\n",
+    "    calls: List[ICACallData]\n",
+    "    origin_domain: int\n",
+    "    salt: str\n",
+    "    needs_relay: bool\n",
+    "    commitment_hash: Optional[bytes] "
    ]
   },
   {
@@ -401,33 +409,30 @@
     "def build_super_swap_data(input: SuperSwapDataInput) -> SuperSwapData:\n",
     "    d_quote, account, slippage, swap_contract_addr = input.destination_quote, input.account, input.slippage, input.swapper_contract_addr\n",
     "\n",
-    "    destination_chain_swap_plan = setup_planner(d_quote, slippage, account, swap_contract_addr) if d_quote else None\n",
+    "    # TODO: figure out if destination quote should come with tweaked amount\n",
+    "    if d_quote: \n",
+    "        d_quote_with_max_amount_in = copy.deepcopy(d_quote)\n",
+    "        d_quote_with_max_amount_in.input.amount_in = CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "    destination_chain_swap_plan = setup_planner(d_quote_with_max_amount_in, slippage, account, swap_contract_addr) if d_quote_with_max_amount_in else None\n",
     "\n",
     "    # TODO: figure out if we can just use len(commands) here\n",
     "    swap_subplan_cmds = destination_chain_swap_plan.get_encoded_commands() if destination_chain_swap_plan else None\n",
     "    swap_subplan_cmds = bytes.fromhex(swap_subplan_cmds.replace('0x', '')) if swap_subplan_cmds else None\n",
     "\n",
+    "    destination_transfer_args = encode(ABI_DEFINITION[CommandType.TRANSFER_FROM], [\n",
+    "        input.to_bridge_token.token_address, input.destination_router, CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "    ])\n",
     "    # Encode fallback transfer\n",
-    "    transfer_subplan = encode_packed([\"bytes1\"], [bytes([CommandType.TRANSFER_FROM])])\n",
-    "\n",
-    "    print(f\">>>>>>>>>>>>>> transfer_subplan >>>>>>>>>>>>>>>\", transfer_subplan.hex())\n",
-    "\n",
-    "    transfer_args = encode(\n",
+    "    fallback_transfer_cmd = encode_packed([\"bytes1\"], [bytes([CommandType.TRANSFER_FROM])])\n",
+    "    fallback_transfer_args = encode(\n",
     "        ABI_DEFINITION[CommandType.TRANSFER_FROM],\n",
     "        [input.to_bridge_token.token_address, account, CONTRACT_BALANCE_FOR_V3_SWAPS]\n",
     "    )\n",
-    "\n",
-    "    print(f\">>>>>>>>>>>>>> transfer_args >>>>>>>>>>>>>>>\", transfer_args.hex())\n",
-    "    print(f\">>>>>>>>>>>>>>> original swap_subplan_cmds\", swap_subplan_cmds)\n",
-    "\n",
     "    subplan_abi = [\"bytes\", \"bytes[]\"]\n",
     "\n",
-    "    print(f\">>>>>>>>>>>>>> subplan_abi >>>>>>>>>>>>>>>\", subplan_abi)\n",
-    "    print(f\">>>>>>>>>>>>>> swap_subplan_cmds >>>>>>>>>>>>>>>\", swap_subplan_cmds.hex() if swap_subplan_cmds else None)\n",
-    "\n",
     "    destination_inputs = [\n",
-    "        encode(subplan_abi, [swap_subplan_cmds, destination_chain_swap_plan.inputs]),\n",
-    "        encode(subplan_abi, [transfer_subplan, [transfer_args]]),\n",
+    "        encode(subplan_abi, [swap_subplan_cmds, [destination_transfer_args] + destination_chain_swap_plan.inputs]),\n",
+    "        encode(subplan_abi, [fallback_transfer_cmd, [fallback_transfer_args]]),\n",
     "    ] if swap_subplan_cmds else None\n",
     "\n",
     "    # Encode Sub Plan commands\n",
@@ -438,8 +443,6 @@
     "            bytes([CommandType.EXECUTE_SUB_PLAN | FLAG_ALLOW_REVERT])\n",
     "        ]\n",
     "    )\n",
-    "\n",
-    "    print(f\">>>>>>>>>>>>>> destination_cmds >>>>>>>>>>>>>>>\", destination_cmds.hex())\n",
     "\n",
     "    erc20_abi = [\n",
     "        {\n",
@@ -453,31 +456,29 @@
     "        }\n",
     "    ]\n",
     "    \n",
-    "    calls = [\n",
-    "        ICACallData(\n",
-    "            to=to_bytes32_str(input.to_bridge_token.token_address),\n",
-    "            value=0,\n",
-    "            # TODO: change this to maxBridgedAmount, as at least for exact-in we might not know exactly how much is bridged over, and want to be sure\n",
-    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[input.destination_router, input.user_ICA_balance + input.bridged_amount])\n",
-    "        )\n",
-    "    ]\n",
+    "    calls = []\n",
     "\n",
     "    if destination_inputs:\n",
-    "        print(f\">>>>>>>>>>>>>> destination_inputs >>>>>>>>>>>>>>>\", destination_inputs)\n",
-    "        print(f\">>>>>>>>>>>>> destination_router\", input.destination_router)\n",
+    "        # ICA approves router to withdraw a very high amount\n",
+    "        calls.append(ICACallData(\n",
+    "            to=to_bytes32_str(input.to_bridge_token.token_address),\n",
+    "            value=0,\n",
+    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[input.destination_router, MAX_UINT256])\n",
+    "        ))\n",
+    "        # destination chain swap\n",
     "        calls.append(ICACallData(\n",
     "            to=to_bytes32_str(input.destination_router),\n",
     "            value=0,\n",
     "            data=Web3().eth.contract(abi=get_abi(\"swapper\")).encode_abi(\"execute\", args=[destination_cmds, destination_inputs])\n",
     "        ))\n",
-    "\n",
-    "    print(f\"calls\", calls)\n",
-    "\n",
+    "        # reset approval back to zero\n",
+    "        calls.append(ICACallData(\n",
+    "            to=to_bytes32_str(input.to_bridge_token.token_address),\n",
+    "            value=0,\n",
+    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[input.destination_router, 0])\n",
+    "        ))\n",
     "\n",
     "    commitment_hash = hash_ICA_calls(calls, input.salt)\n",
-    "\n",
-    "    print(f\">>>>>>>>>>>>>>>>>>>>>>>>>>>> commitment_hash\", commitment_hash.hex())\n",
-    "\n",
     "    needs_relay = input.to_token.token_address != input.to_bridge_token.token_address\n",
     "\n",
     "    destination_chain_planner = RoutePlanner()\n",
@@ -488,13 +489,17 @@
     "        input.user_ICA if needs_relay else input.account,\n",
     "        input.from_bridge_token.token_address,\n",
     "        input.origin_bridge,\n",
-    "        input.bridged_amount,\n",
+    "        CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
     "        input.bridge_fee,\n",
     "        input.destination_domain,\n",
     "        input.from_token.token_address == input.from_bridge_token.token_address,\n",
     "    ])\n",
     "\n",
     "    if needs_relay:\n",
+    "        variant = 1\n",
+    "        hook_metadata = encode_packed([\"uint16\", \"uint256\", \"uint256\", \"address\"], [\n",
+    "            variant, input.xchain_fee, XCHAIN_GAS_LIMIT_UPPERBOUND, input.account \n",
+    "        ])\n",
     "        # destination swap command\n",
     "        destination_chain_planner.add_command(CommandType.EXECUTE_CROSS_CHAIN, [\n",
     "            input.destination_domain,\n",
@@ -502,14 +507,19 @@
     "            to_bytes32(input.destination_ICA_router),\n",
     "            to_bytes32(ADDRESS_ZERO),\n",
     "            commitment_hash,\n",
-    "            # fee to dispatch x-chain message\n",
     "            input.xchain_fee,\n",
     "            input.origin_hook,\n",
-    "            # TODO: figure out if this works correctly\n",
-    "            bytes.fromhex(\"0x\".replace('0x', ''))\n",
+    "            hook_metadata\n",
     "        ])\n",
     "\n",
-    "    return SuperSwapData(destination_planner=destination_chain_planner, calls=calls, origin_domain=input.origin_domain, salt=input.salt, needs_relay=needs_relay)"
+    "    return SuperSwapData(\n",
+    "        destination_planner=destination_chain_planner,\n",
+    "        calls=calls,\n",
+    "        origin_domain=input.origin_domain,\n",
+    "        salt=input.salt,\n",
+    "        needs_relay=needs_relay,\n",
+    "        commitment_hash=commitment_hash if needs_relay else None\n",
+    "    )"
    ]
   },
   {
