--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -230,11 +230,12 @@
     "def setup_planner(quote: Quote, slippage: float, account: str, router_address: str) -> RoutePlanner:\n",
     "    \"\"\"Setup route planner with the given quote and chain\"\"\"\n",
     "    \n",
+    "    print(\">>>>>>>>>>>> planner with\", quote.input.amount_in)\n",
+    "\n",
     "    route_planner = RoutePlanner()\n",
     "    min_amount_out = apply_slippage(quote.amount_out, slippage)\n",
     "\n",
-    "    # By default money comes from contract\n",
-    "    tokens_come_from_contract = False\n",
+    "    tokens_come_from_contract = quote.input.amount_in == CONTRACT_BALANCE_FOR_V3_SWAPS\n",
     "    \n",
     "    # Handle wrapped native token if needed\n",
     "    if quote.from_token.wrapped_token_address:\n",
@@ -414,11 +415,18 @@
     "    if d_quote: \n",
     "        d_quote_with_max_amount_in = copy.deepcopy(d_quote)\n",
     "        d_quote_with_max_amount_in.input.amount_in = CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "    \n",
     "    destination_chain_swap_plan = setup_planner(d_quote_with_max_amount_in, slippage, account, swap_contract_addr) if d_quote_with_max_amount_in else None\n",
     "\n",
-    "    # TODO: figure out if we can just use len(commands) here\n",
-    "    swap_subplan_cmds = destination_chain_swap_plan.get_encoded_commands() if destination_chain_swap_plan else None\n",
+    "    swap_subplan_cmds = None\n",
+    "\n",
+    "    if destination_chain_swap_plan:\n",
+    "        swap_subplan_cmds = destination_chain_swap_plan.get_encoded_commands()\n",
+    "        swap_subplan_cmds = \"0x\" + format(CommandType.TRANSFER_FROM, '02x') + swap_subplan_cmds.replace('0x', '')\n",
+    "    \n",
     "    swap_subplan_cmds = bytes.fromhex(swap_subplan_cmds.replace('0x', '')) if swap_subplan_cmds else None\n",
+    "\n",
+    "    print(\"destination swap plan\", destination_chain_swap_plan.commands, destination_chain_swap_plan.inputs)\n",
     "\n",
     "    destination_transfer_args = encode(ABI_DEFINITION[CommandType.TRANSFER_FROM], [\n",
     "        input.to_bridge_token.token_address, input.destination_router, CONTRACT_BALANCE_FOR_V3_SWAPS\n",
@@ -430,6 +438,8 @@
     "        [input.to_bridge_token.token_address, account, CONTRACT_BALANCE_FOR_V3_SWAPS]\n",
     "    )\n",
     "    subplan_abi = [\"bytes\", \"bytes[]\"]\n",
+    "\n",
+    "    print(\">>>>>>>>>>>\", [swap_subplan_cmds, [destination_transfer_args] + destination_chain_swap_plan.inputs])\n",
     "\n",
     "    destination_inputs = [\n",
     "        encode(subplan_abi, [swap_subplan_cmds, [destination_transfer_args] + destination_chain_swap_plan.inputs]),\n",
@@ -546,7 +556,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>>>>>>>>>> planner with 57896044618658097711785492504343953926634992332820282019728792003956564819968\n",
+      "destination swap plan 0x00 [b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x1ezkc\\xf9\\x84\\x84QF\\x10\\xa9\\xf0\\xd5\\xb3\\x99\\xd4\\xf7\\xa9\\xb1\\xda\\x80\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x0f\\xa3\\xb1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xc0\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00+\\x12\\x17\\xbf\\xe6\\xc7s\\xee\\xc6\\xccJ8\\xb5\\xdcE\\xb9\"\\x92\\xb6\\xe1\\x89\\x00\\x002\\x07\\x8dx+v\\x04t\\xa3a\\xdd\\xa0\\xaf89)\\x0b\\x0e\\xf5z\\xd6\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00']\n",
+      ">>>>>>>>>>> [b'\\x07\\x00', [b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x12\\x17\\xbf\\xe6\\xc7s\\xee\\xc6\\xccJ8\\xb5\\xdcE\\xb9\"\\x92\\xb6\\xe1\\x89\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00m\\xf1\\xc9\\x14$\\xf7\\x9e@\\xe3;\\x1aH\\xf0h{fk\\xe7\\x10u\\x80\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00', b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x1ezkc\\xf9\\x84\\x84QF\\x10\\xa9\\xf0\\xd5\\xb3\\x99\\xd4\\xf7\\xa9\\xb1\\xda\\x80\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x0f\\xa3\\xb1\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\xc0\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00+\\x12\\x17\\xbf\\xe6\\xc7s\\xee\\xc6\\xccJ8\\xb5\\xdcE\\xb9\"\\x92\\xb6\\xe1\\x89\\x00\\x002\\x07\\x8dx+v\\x04t\\xa3a\\xdd\\xa0\\xaf89)\\x0b\\x0e\\xf5z\\xd6\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00']]\n"
+     ]
+    }
+   ],
    "source": [
     "uni_o_usdt = Token(chain_id='130', chain_name='Uni', token_address='0x1217BfE6c773EEC6cc4A38b5Dc45B92292B6E189', symbol='oUSDT', decimals=6, listed=True, wrapped_token_address=None)\n",
     "op_o_usdt = Token(chain_id='10', chain_name='OP', token_address='0x1217BfE6c773EEC6cc4A38b5Dc45B92292B6E189', symbol='oUSDT', decimals=6, listed=True, wrapped_token_address=None)\n",
@@ -623,7 +643,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>>>>>>>>>> planner with 5\n",
+      ">>>>>>>>>>>> planner with 5\n",
+      ">>>>>>>>>>>> planner with 5\n",
+      ">>>>>>>>>>>> planner with 5\n",
+      ">>>>>>>>>>>> planner with 5\n",
+      ">>>>>>>>>>>> planner with 5\n",
+      ">>>>>>>>>>>> planner with 5\n"
+     ]
+    }
+   ],
    "source": [
     "account = '0x533cf9fb379488ffe0b1065c42c744fbd4b0e1a3'\n",
     "router = '0x4bF3E32de155359D1D75e8B474b66848221142fc'\n",
