add lisk, superwasp op -> lisk

--- a/src/config.ipynb
+++ b/src/config.ipynb
@@ -243,6 +243,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lisk Chain settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def make_lisk_chain_settings(get_env: GetEnv = get_env, **kwargs) -> ChainSettings:\n",
+    "    d = {\n",
+    "        \"rpc_uri\": \"https://lisk.drpc.org\",\n",
+    "        \"pools_count_upper_bound\": 100,\n",
+    "        \"wrapped_native_token_addr\": \"0x4200000000000000000000000000000000000006\",\n",
+    "        \"interchain_router_contract_addr\": \"0xE59592a179c4f436d5d2e4caA6e2750beA4E3166\",\n",
+    "        \"bridge_contract_addr\": \"0x7bd2676c85cca9fa2203eba324fb8792fbd520b8\",\n",
+    "        \"bridge_token_addr\": \"0x1217bfe6c773eec6cc4a38b5dc45b92292b6e189\",\n",
+    "        \"sugar_contract_addr\": \"0x1443c0757f77c04bd514427d2bE356A5834E4167\",\n",
+    "        \"sugar_rewards_contract_addr\": \"0xB1d0DFFe6260982164B53EdAcD3ccd58B081889d\",\n",
+    "        \"slipstream_contract_addr\": \"0xB98fB4C9C99dE155cCbF5A14af0dBBAd96033D6f\",\n",
+    "        \"nfpm_contract_addr\": \"0x991d5546C4B442B4c5fdc4c8B8b8d131DEB24702\",\n",
+    "        \"price_oracle_contract_addr\": \"0x024503003fFE9AF285f47c1DaAaA497D9f1166D0\",\n",
+    "        \"router_contract_addr\": \"0x3a63171DD9BebF4D07BC782FECC7eb0b890C2A45\",\n",
+    "        \"quoter_contract_addr\": \"0x2f7150B288ef1cc553207bD9fbd40D4e0e093B24\",\n",
+    "        \"swapper_contract_addr\": \"0x01D40099fCD87C018969B0e8D4aB1633Fb34763C\",\n",
+    "        \"token_addr\": \"\",\n",
+    "        \"stable_token_addr\": \"0xf242275d3a6527d877f2c927a82d9b057609cc71\",\n",
+    "        \"connector_tokens_addrs\": \"0x4200000000000000000000000000000000000006,0xac485391eb2d7d88253a7f1ef18c37f4242d1a24,0x05d032ac25d322df992303dca074ee7392c117b9,0x03c7054bcb39f7b2e5b2c7acb37583e32d70cfa3\",\n",
+    "        \"message_module_contract_addr\": \"0x2BbA7515F7cF114B45186274981888D8C2fBA15E\",\n",
+    "        \"excluded_tokens_addrs\": \"\"\n",
+    "    }\n",
+    "    return make_settings(\"1135\", \"Lisk\", chain_settings=d, get_env=get_env, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Uni Chain settings"
    ]
   },
