move things around, add test for superswap

--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -32,8 +32,9 @@
     "from datetime import datetime, timedelta\n",
     "from dataclasses import dataclass\n",
     "import networkx as nx\n",
-    "import math, time, asyncio, decimal, secrets\n",
-    "from contextlib import contextmanager, asynccontextmanager"
+    "import math, time, asyncio, decimal, secrets, socket\n",
+    "from contextlib import contextmanager, asynccontextmanager\n",
+    "from fastcore.test import test_eq"
    ]
   },
   {
@@ -133,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "1749285641"
+       "1750942347"
       ]
      },
      "execution_count": null,
@@ -226,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "'2121127211495117091043077392056322001526626517268364991586721507'"
+       "'7635613601916267396248769565479189614153287360361504658375907466'"
       ]
      },
      "execution_count": null,
@@ -704,8 +705,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling sugar onchain took 1.0051 seconds\n",
-      "Another API call took 1.0011 seconds\n"
+      "Calling sugar onchain took 1.0041 seconds\n",
+      "Another API call took 1.0025 seconds\n"
      ]
     }
    ],
@@ -718,6 +719,27 @@
     "# Asynchronous code\n",
     "async with atime_it(\"Another API call\"):\n",
     "    await asyncio.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def require_supersim():\n",
+    "    try:\n",
+    "        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "        sock.settimeout(2)\n",
+    "        result = sock.connect_ex(('127.0.0.1', 4444))\n",
+    "        # are you running supersim?\n",
+    "        test_eq(result, 0)\n",
+    "    except socket.error as err:\n",
+    "        test_eq(err, None)\n",
+    "    finally:\n",
+    "        sock.close()"
    ]
   },
   {
