--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -83,16 +83,11 @@
     "            'salt': salt,\n",
     "            'relayers': hyperlane_relayers\n",
     "        })\n",
-    "        print(\"body:\")\n",
-    "        print(body)\n",
     "        resp = requests.post(hyperlane_relay_url, headers={'Content-Type': 'application/json'}, data=body)\n",
-    "        print(f\"Response status code: {resp.status_code}: {resp.text}\")\n",
-    "\n",
+    "        print(f\"Hyperlane response: {resp.status_code}: {resp.text}\")\n",
     "        if not resp.ok:\n",
-    "            # Read response text\n",
     "            response_text = resp.text\n",
     "            error_msg = f\"Failed to share calls with relayer: {resp.status_code} {response_text}\"\n",
-    "            # Replace with your preferred error handling (toast equivalent)\n",
     "            print(f\"Error: {error_msg}\")\n",
     "            raise Exception(error_msg)\n",
     "                "
@@ -107,10 +102,6 @@
    "source": [
     "#| export\n",
     "\n",
-    "\n",
-    "# You'll need to import or define these constants\n",
-    "# from constants import HL_RELAY_URL\n",
-    "\n",
     "# TODO: add helper to inspect tx using https://explorer.hyperlane.xyz/?search\n",
     "\n",
     "class AsyncSuperswap:\n",
@@ -120,7 +111,6 @@
     "\n",
     "    async def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=25)\n",
-    "        print(f\"SuperSwap quote: {quote}\")\n",
     "        return await self.swap_from_quote(quote=quote, slippage=0.1)\n",
     "\n",
     "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
@@ -173,8 +163,6 @@
     "            bridge_fee = await from_chain.get_bridge_fee(int(to_chain.id))\n",
     "            xchain_fee = await from_chain.get_xchain_fee(destination_domain)\n",
     "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
-    "            \n",
-    "            print(f\"bridge_fee: {bridge_fee}, xchain_fee: {xchain_fee}, total_fee: {total_fee}\")\n",
     "\n",
     "            swap_data = build_super_swap_data(SuperSwapDataInput(\n",
     "                from_token=quote.from_token,\n",
@@ -208,10 +196,6 @@
     "                router_address=from_chain.settings.swapper_contract_addr\n",
     "            ) if origin_quote else None\n",
     "\n",
-    "            print(f\"Origin planner: {origin_planner}\")\n",
-    "            print(f\"Origin planner: {origin_planner.commands}\")\n",
-    "            for i in origin_planner.inputs: print(f\"origin planner input {i.hex()}\")\n",
-    "\n",
     "            cmds, inputs = \"\", [] \n",
     "\n",
     "            if origin_planner:\n",
@@ -224,7 +208,6 @@
     "            return await self.write(chain=self.chain_for_writes or from_chain, cmds=cmds, inputs=inputs, quote=quote, swap_data=swap_data, total_fee=total_fee)\n",
     "\n",
     "    async def write(self, chain: AsyncChain, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
-    "        # >>>>>>>>>>>>>>>>>>> WRITE stuff <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n",
     "        swapper_contract_addr, from_token =  chain.settings.swapper_contract_addr, quote.from_token\n",
     "        value = quote.amount_in * (10 ** from_token.decimals)\n",
     "        # TODO: extend this to proper native token support\n",
@@ -232,7 +215,6 @@
     "        async with chain:\n",
     "            await chain.set_token_allowance(from_token, swapper_contract_addr, value)\n",
     "            tx = await chain.sign_and_send_tx(chain.swapper.functions.execute(*[cmds, inputs]), value=message_fee)\n",
-    "            print(f\"tx : {tx}\")\n",
     "            if swap_data.needs_relay:\n",
     "                self.relayer.share_calls(\n",
     "                    calls=serialize_ica_calls(swap_data.calls),\n",
