--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -305,10 +305,10 @@
     "            slippage = slippage if slippage is not None else self.from_chain.settings.swap_slippage\n",
     "            \n",
     "            # TODO: use chain.get_domain() when all chains support domains\n",
-    "            origin_domain = get_domain(int(self.from_chain.id))\n",
-    "            destination_domain = get_domain(int(self.to_chain.id))\n",
+    "            origin_domain = get_domain(int(self.from_chain.chain_id))\n",
+    "            destination_domain = get_domain(int(self.to_chain.chain_id))\n",
     "            user_ica_address= self.from_chain.get_remote_interchain_account(destination_domain)\n",
-    "            bridge_fee = self.from_chain.get_bridge_fee(int(self.to_chain.id))\n",
+    "            bridge_fee = self.from_chain.get_bridge_fee(int(self.to_chain.chain_id))\n",
     "            xchain_fee = self.from_chain.get_xchain_fee(destination_domain)            \n",
     "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
     "\n",
@@ -374,10 +374,10 @@
     "            slippage = slippage if slippage is not None else self.from_chain.settings.swap_slippage\n",
     "            \n",
     "            # TODO: use chain.get_domain() when all chains support domains\n",
-    "            origin_domain = await get_domain_async(int(self.from_chain.id))\n",
-    "            destination_domain = await get_domain_async(int(self.to_chain.id))\n",
+    "            origin_domain = await get_domain_async(int(self.from_chain.chain_id))\n",
+    "            destination_domain = await get_domain_async(int(self.to_chain.chain_id))\n",
     "            user_ica_address=await self.from_chain.get_remote_interchain_account(destination_domain)\n",
-    "            bridge_fee = await self.from_chain.get_bridge_fee(int(self.to_chain.id))\n",
+    "            bridge_fee = await self.from_chain.get_bridge_fee(int(self.to_chain.chain_id))\n",
     "            xchain_fee = await self.from_chain.get_xchain_fee(destination_domain)            \n",
     "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
     "\n",
