--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -182,7 +182,7 @@
     "        command_hex = format(command_type, '02x')\n",
     "        self.commands = self.commands + command_hex\n",
     "        # TODO: figure out why we keep this alongside command_hex\n",
-    "        self.bytes_commands.append(format(command_type, '02x'))\n",
+    "        self.bytes_commands.append(command_hex)\n",
     "\n",
     "    def get_encoded_commands(self) -> str: return self.commands\n",
     "    \n",
@@ -406,15 +406,15 @@
    "source": [
     "#| export\n",
     "\n",
-    "def build_super_swap_data(input: SuperSwapDataInput) -> SuperSwapData:\n",
-    "    d_quote, account, slippage, swap_contract_addr = input.destination_quote, input.account, input.slippage, input.swapper_contract_addr\n",
+    "def build_super_swap_data(i: SuperSwapDataInput) -> SuperSwapData:\n",
+    "    d_quote, account, slippage, swap_contract_addr = i.destination_quote, i.account, i.slippage, i.swapper_contract_addr\n",
     "\n",
     "    # TODO: figure out if destination quote should come with tweaked amount\n",
     "    if d_quote: \n",
     "        d_quote_with_max_amount_in = copy.deepcopy(d_quote)\n",
     "        d_quote_with_max_amount_in.input.amount_in = CONTRACT_BALANCE_FOR_V3_SWAPS\n",
     "    \n",
-    "    destination_chain_swap_plan = setup_planner(d_quote_with_max_amount_in, slippage, account, swap_contract_addr) if d_quote_with_max_amount_in else None\n",
+    "    destination_chain_swap_plan = setup_planner(d_quote_with_max_amount_in, slippage, account, swap_contract_addr) if d_quote else None\n",
     "\n",
     "    swap_subplan_cmds = None\n",
     "\n",
@@ -425,13 +425,13 @@
     "    swap_subplan_cmds = bytes.fromhex(swap_subplan_cmds.replace('0x', '')) if swap_subplan_cmds else None\n",
     "\n",
     "    destination_transfer_args = encode(ABI_DEFINITION[CommandType.TRANSFER_FROM], [\n",
-    "        input.to_bridge_token.token_address, input.destination_router, CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "        i.to_bridge_token.token_address, i.destination_router, CONTRACT_BALANCE_FOR_V3_SWAPS\n",
     "    ])\n",
     "    # Encode fallback transfer\n",
     "    fallback_transfer_cmd = encode_packed([\"bytes1\"], [bytes([CommandType.TRANSFER_FROM])])\n",
     "    fallback_transfer_args = encode(\n",
     "        ABI_DEFINITION[CommandType.TRANSFER_FROM],\n",
-    "        [input.to_bridge_token.token_address, account, CONTRACT_BALANCE_FOR_V3_SWAPS]\n",
+    "        [i.to_bridge_token.token_address, account, CONTRACT_BALANCE_FOR_V3_SWAPS]\n",
     "    )\n",
     "    subplan_abi = [\"bytes\", \"bytes[]\"]\n",
     "\n",
@@ -466,62 +466,62 @@
     "    if destination_inputs:\n",
     "        # ICA approves router to withdraw a very high amount\n",
     "        calls.append(ICACallData(\n",
-    "            to=to_bytes32_str(input.to_bridge_token.token_address),\n",
+    "            to=to_bytes32_str(i.to_bridge_token.token_address),\n",
     "            value=0,\n",
-    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[input.destination_router, MAX_UINT256])\n",
+    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[i.destination_router, MAX_UINT256])\n",
     "        ))\n",
     "        # destination chain swap\n",
     "        calls.append(ICACallData(\n",
-    "            to=to_bytes32_str(input.destination_router),\n",
+    "            to=to_bytes32_str(i.destination_router),\n",
     "            value=0,\n",
     "            data=Web3().eth.contract(abi=get_abi(\"swapper\")).encode_abi(\"execute\", args=[destination_cmds, destination_inputs])\n",
     "        ))\n",
     "        # reset approval back to zero\n",
     "        calls.append(ICACallData(\n",
-    "            to=to_bytes32_str(input.to_bridge_token.token_address),\n",
+    "            to=to_bytes32_str(i.to_bridge_token.token_address),\n",
     "            value=0,\n",
-    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[input.destination_router, 0])\n",
+    "            data=Web3().eth.contract(abi=erc20_abi).encode_abi(\"approve\", args=[i.destination_router, 0])\n",
     "        ))\n",
     "\n",
-    "    commitment_hash = hash_ICA_calls(calls, input.salt)\n",
-    "    needs_relay = input.to_token.token_address != input.to_bridge_token.token_address\n",
+    "    commitment_hash = hash_ICA_calls(calls, i.salt)\n",
+    "    needs_relay = i.to_token.token_address != i.to_bridge_token.token_address\n",
     "\n",
     "    destination_chain_planner = RoutePlanner()\n",
     "\n",
     "    # bridge command\n",
     "    destination_chain_planner.add_command(CommandType.BRIDGE_TOKEN, [\n",
     "        BridgeType.HYP_XERC20,\n",
-    "        input.user_ICA if needs_relay else input.account,\n",
-    "        input.from_bridge_token.token_address,\n",
-    "        input.origin_bridge,\n",
+    "        i.user_ICA if needs_relay else i.account,\n",
+    "        i.from_bridge_token.token_address,\n",
+    "        i.origin_bridge,\n",
     "        CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
-    "        input.bridge_fee,\n",
-    "        input.destination_domain,\n",
-    "        input.from_token.token_address == input.from_bridge_token.token_address,\n",
+    "        i.bridge_fee,\n",
+    "        i.destination_domain,\n",
+    "        i.from_token.token_address == i.from_bridge_token.token_address,\n",
     "    ])\n",
     "\n",
     "    if needs_relay:\n",
     "        variant = 1\n",
     "        hook_metadata = encode_packed([\"uint16\", \"uint256\", \"uint256\", \"address\"], [\n",
-    "            variant, input.xchain_fee, XCHAIN_GAS_LIMIT_UPPERBOUND, input.account \n",
+    "            variant, i.xchain_fee, XCHAIN_GAS_LIMIT_UPPERBOUND, i.account \n",
     "        ])\n",
     "        # destination swap command\n",
     "        destination_chain_planner.add_command(CommandType.EXECUTE_CROSS_CHAIN, [\n",
-    "            input.destination_domain,\n",
-    "            input.origin_ICA_router,\n",
-    "            to_bytes32(input.destination_ICA_router),\n",
+    "            i.destination_domain,\n",
+    "            i.origin_ICA_router,\n",
+    "            to_bytes32(i.destination_ICA_router),\n",
     "            to_bytes32(ADDRESS_ZERO),\n",
     "            commitment_hash,\n",
-    "            input.xchain_fee,\n",
-    "            input.origin_hook,\n",
+    "            i.xchain_fee,\n",
+    "            i.origin_hook,\n",
     "            hook_metadata\n",
     "        ])\n",
     "\n",
     "    return SuperSwapData(\n",
     "        destination_planner=destination_chain_planner,\n",
     "        calls=calls,\n",
-    "        origin_domain=input.origin_domain,\n",
-    "        salt=input.salt,\n",
+    "        origin_domain=i.origin_domain,\n",
+    "        salt=i.salt,\n",
     "        needs_relay=needs_relay,\n",
     "        commitment_hash=commitment_hash if needs_relay else None\n",
     "    )"
