--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "@dataclass\n",
     "class QuoteInput:\n",
-    "    from_token: Token; to_token: Token; path: List[Tuple[LiquidityPoolForSwap, bool]]; amount_in: int\n",
+    "    from_token: Token; to_token: Token; path: List[Tuple[LiquidityPoolForSwap, bool]]; amount_in: float\n",
     "\n",
     "    def to_tuple(self) -> tuple: return (self.from_token, self.to_token, tuple(self.path), self.amount_in, self.amount_out)\n",
     "\n",
@@ -108,7 +108,9 @@
     "    @property\n",
     "    def path(self) -> List[Tuple[LiquidityPoolForSwap, bool]]: return self.input.path\n",
     "    @property\n",
-    "    def amount_in(self) -> int: return self.input.amount_in"
+    "    def amount_in(self) -> float: return self.input.amount_in\n",
+    "    @property\n",
+    "    def amount_in_wei(self) -> int: return self.from_token.to_wei(self.amount_in)\n"
    ]
   },
   {
