--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -488,16 +488,19 @@
     "\n",
     "    destination_chain_planner = RoutePlanner()\n",
     "\n",
+    "    # TODO: confirm this is OK (destination quote check)\n",
+    "    starts_with_bridge_token = (i.from_token.token_address == i.from_bridge_token.token_address) and d_quote is not None\n",
+    "\n",
     "    # bridge command\n",
     "    destination_chain_planner.add_command(CommandType.BRIDGE_TOKEN, [\n",
     "        BridgeType.HYP_XERC20,\n",
     "        i.user_ICA if needs_relay else i.account,\n",
     "        i.from_bridge_token.token_address,\n",
     "        i.origin_bridge,\n",
-    "        CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "        d_quote.amount_in_wei if starts_with_bridge_token else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
     "        i.bridge_fee,\n",
     "        i.destination_domain,\n",
-    "        i.from_token.token_address == i.from_bridge_token.token_address,\n",
+    "        starts_with_bridge_token,\n",
     "    ])\n",
     "\n",
     "    if needs_relay:\n",
