--- a/src/token.ipynb
+++ b/src/token.ipynb
@@ -61,6 +61,10 @@
     "    listed: bool\n",
     "    wrapped_token_address: str = None\n",
     "\n",
+    "    def to_wei(self, value: float) -> int:\n",
+    "        \"\"\"Convert a value to wei based on the token's decimals.\"\"\"\n",
+    "        return int(value * 10**self.decimals)\n",
+    "\n",
     "    @property\n",
     "    def is_native(self) -> bool: return self.wrapped_token_address is not None\n",
     "\n",
