try fewer tests

--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -137,24 +137,24 @@
     "    test_eq(type(last_call[\"origin_domain\"]), int)\n",
     "\n",
     "# to o_usdt variation\n",
-    "async with AsyncOPChainSimnet() as op_sim:\n",
-    "    relayer=MockSuperswapRelayer()\n",
-    "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.o_usdt\n",
-    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=20)\n",
-    "    assert(tx.startswith(\"0x\"))\n",
-    "    test_eq(relayer.get_call_count(), 0)\n",
+    "# async with AsyncOPChainSimnet() as op_sim:\n",
+    "#     relayer=MockSuperswapRelayer()\n",
+    "#     from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.o_usdt\n",
+    "#     tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=20)\n",
+    "#     assert(tx.startswith(\"0x\"))\n",
+    "#     test_eq(relayer.get_call_count(), 0)\n",
     "\n",
-    "# from o_usdt variation\n",
-    "with OPChainSimnet() as op_sim:\n",
-    "    print(op_sim.settings)\n",
-    "    relayer=MockSuperswapRelayer()\n",
-    "    from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
-    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=1)\n",
-    "    assert(tx.startswith(\"0x\"))\n",
-    "    test_eq(relayer.get_call_count(), 1)\n",
-    "    last_call = relayer.get_last_call()\n",
-    "    test_eq(type(last_call[\"salt\"]), str)\n",
-    "    test_eq(type(last_call[\"origin_domain\"]), int)\n",
+    "# # from o_usdt variation\n",
+    "# with OPChainSimnet() as op_sim:\n",
+    "#     print(op_sim.settings)\n",
+    "#     relayer=MockSuperswapRelayer()\n",
+    "#     from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
+    "#     tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=1)\n",
+    "#     assert(tx.startswith(\"0x\"))\n",
+    "#     test_eq(relayer.get_call_count(), 1)\n",
+    "#     last_call = relayer.get_last_call()\n",
+    "#     test_eq(type(last_call[\"salt\"]), str)\n",
+    "#     test_eq(type(last_call[\"origin_domain\"]), int)\n",
     "\n"
    ]
   }
