--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -42,7 +42,9 @@
     "    with OPChainSimnet() as op_simnet_sync:\n",
     "        print(op_simnet_sync.swap_from_quote(quote))\n",
     "\n",
-    "# # velo -> eth\n",
+    "await sleep_between_swaps()\n",
+    "\n",
+    "# velo -> eth\n",
     "async with AsyncOPChain() as op:\n",
     "    async with atime_it(\"Get quote\"):\n",
     "        quote = await op.get_quote(op.velo, op.eth, 10)\n",
@@ -50,7 +52,9 @@
     "    async with AsyncOPChainSimnet() as op_simnet:\n",
     "        print(await op_simnet.swap_from_quote(quote))\n",
     "\n",
-    "# # eth -> velo\n",
+    "await sleep_between_swaps()\n",
+    "\n",
+    "# eth -> velo\n",
     "async with AsyncOPChain() as op:\n",
     "    async with atime_it(\"Get quote\"):\n",
     "        quote = await op.get_quote(op.eth, op.velo, 0.001)\n",
@@ -118,7 +122,7 @@
     "with OPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.lsk\n",
-    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=20)\n",
+    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=10)\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 1)\n",
     "    last_call = relayer.get_last_call()\n",
@@ -129,7 +133,7 @@
     "async with AsyncOPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.lsk\n",
-    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=20)\n",
+    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=10)\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 1)\n",
     "    last_call = relayer.get_last_call()\n",
@@ -137,24 +141,24 @@
     "    test_eq(type(last_call[\"origin_domain\"]), int)\n",
     "\n",
     "# to o_usdt variation\n",
-    "# async with AsyncOPChainSimnet() as op_sim:\n",
-    "#     relayer=MockSuperswapRelayer()\n",
-    "#     from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.o_usdt\n",
-    "#     tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=20)\n",
-    "#     assert(tx.startswith(\"0x\"))\n",
-    "#     test_eq(relayer.get_call_count(), 0)\n",
+    "async with AsyncOPChainSimnet() as op_sim:\n",
+    "    relayer=MockSuperswapRelayer()\n",
+    "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.o_usdt\n",
+    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=10)\n",
+    "    assert(tx.startswith(\"0x\"))\n",
+    "    test_eq(relayer.get_call_count(), 0)\n",
     "\n",
-    "# # from o_usdt variation\n",
-    "# with OPChainSimnet() as op_sim:\n",
-    "#     print(op_sim.settings)\n",
-    "#     relayer=MockSuperswapRelayer()\n",
-    "#     from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
-    "#     tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=1)\n",
-    "#     assert(tx.startswith(\"0x\"))\n",
-    "#     test_eq(relayer.get_call_count(), 1)\n",
-    "#     last_call = relayer.get_last_call()\n",
-    "#     test_eq(type(last_call[\"salt\"]), str)\n",
-    "#     test_eq(type(last_call[\"origin_domain\"]), int)\n",
+    "# from o_usdt variation\n",
+    "with OPChainSimnet() as op_sim:\n",
+    "    print(op_sim.settings)\n",
+    "    relayer=MockSuperswapRelayer()\n",
+    "    from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
+    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=1)\n",
+    "    assert(tx.startswith(\"0x\"))\n",
+    "    test_eq(relayer.get_call_count(), 1)\n",
+    "    last_call = relayer.get_last_call()\n",
+    "    test_eq(type(last_call[\"salt\"]), str)\n",
+    "    test_eq(type(last_call[\"origin_domain\"]), int)\n",
     "\n"
    ]
   }
