implement bridging in superswaps

--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -44,6 +44,63 @@
    "source": [
     "#| export\n",
     "\n",
+    "bridge_get_fee_abi = [\n",
+    "    {\n",
+    "        \"name\": \"quoteGasPayment\",\n",
+    "        \"type\": \"function\",\n",
+    "        \"stateMutability\": \"view\",\n",
+    "        \"inputs\": [\n",
+    "            {\n",
+    "            \"name\": \"chainId\",\n",
+    "            \"type\": \"uint32\"\n",
+    "            }\n",
+    "        ],\n",
+    "        \"outputs\": [\n",
+    "            {\n",
+    "            \"name\": \"\",\n",
+    "            \"type\": \"uint256\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "bridge_transfer_from_abi = [\n",
+    "    {\n",
+    "        \"name\": \"transferRemote\",\n",
+    "        \"type\": \"function\",\n",
+    "        \"stateMutability\": \"payable\",\n",
+    "        \"inputs\": [\n",
+    "            {\n",
+    "                \"name\": \"_destination\",\n",
+    "                \"type\": \"uint32\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"_recipient\", \n",
+    "                \"type\": \"bytes32\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"_amountOrId\",\n",
+    "                \"type\": \"uint256\"\n",
+    "            }\n",
+    "        ],\n",
+    "        \"outputs\": [\n",
+    "            {\n",
+    "                \"name\": \"messageId\",\n",
+    "                \"type\": \"bytes32\"\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "]        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
     "abis_dir=\"abis\"\n",
     "\n",
     "def download_contract_abi(name, address, abis_dir=os.path.join(\"sugar\", abis_dir), etherscan_api_url=\"https://api-optimistic.etherscan.io/api\"):\n",
