--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -211,6 +211,12 @@
     "    @property\n",
     "    def ends_with_bridge_token(self): return self.to_token.token_address == self.destination_bridge_token.token_address\n",
     "\n",
+    "    def get_bridge_quote(self, from_token: Token, to_token: Token, from_bridge: Token, to_bridge: Token,  amount_in: float) -> Optional[SuperSwapQuote]:\n",
+    "        if from_token.token_address == from_bridge.token_address and to_token.token_address == to_bridge.token_address:\n",
+    "            return SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_bridge, to_bridge_token=to_bridge, amount_in=amount_in)\n",
+    "        return None\n",
+    "\n",
+    "\n",
     "    def check_chain_support(self, from_token: Token, to_token: Token) -> None:\n",
     "        \"\"\"Check if the given tokens are supported for superswap.\"\"\"\n",
     "        from_chain, to_chain = get_async_chain_from_token(from_token), get_async_chain_from_token(to_token)\n",
@@ -316,7 +322,16 @@
    "execution_count": null,
    "id": "a6fccdf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'await' outside async function (949135970.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtx = await chain._internal_bridge_token(from_token, to_token, amount, get_domain(int(to_token.chain_id)))\u001b[39m\n         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m 'await' outside async function\n"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "\n",
@@ -325,9 +340,20 @@
     "        self.chain_for_writes = chain_for_writes\n",
     "        self.relayer = relayer or HTTPSuperswapRelayer()\n",
     "\n",
+    "    def bridge_from_quote(self, quote: SuperSwapQuote) -> str:\n",
+    "        assert quote.is_bridge, \"bridge_from_quote can only be used for bridge quotes\"\n",
+    "        self.check_chain_support(quote.from_token, quote.to_token)\n",
+    "        chain = self.chain_for_writes or get_chain_from_token(quote.from_token)\n",
+    "        if not chain.account: raise ValueError(\"Cannot bridge without an account. Please connect your wallet first.\")\n",
+    "        from_token, to_token, amount = quote.from_token, quote.to_token, quote.amount_in\n",
+    "        with chain:\n",
+    "            tx = chain._internal_bridge_token(from_token, to_token, amount, get_domain(int(to_token.chain_id)))\n",
+    "            return f'0x{tx[\"transactionHash\"].hex()}'\n",
+    "\n",
     "    def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
     "        quote = self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "        if quote.is_bridge: return self.bridge_from_quote(quote)\n",
     "        return self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
     "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
@@ -336,6 +362,17 @@
     "        with self.from_chain, self.to_chain:\n",
     "            self.origin_bridge_token = self.from_chain.get_superswap_connector_token()\n",
     "            self.destination_bridge_token = self.to_chain.get_superswap_connector_token()\n",
+    "\n",
+    "            # are we bridging?\n",
+    "            bridge_quote = self.get_bridge_quote(\n",
+    "                from_token=from_token,\n",
+    "                to_token=to_token,\n",
+    "                from_bridge=self.origin_bridge_token,\n",
+    "                to_bridge=self.destination_bridge_token,\n",
+    "                amount_in=amount_in\n",
+    "            )\n",
+    "\n",
+    "            if bridge_quote: return bridge_quote\n",
     "\n",
     "            # we only need origin quote if we don't start with oUSDT\n",
     "            if not self.starts_with_bridge_token:\n",
@@ -351,6 +388,8 @@
     "\n",
     "    def swap_from_quote(self, quote: SuperSwapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
+    "\n",
+    "        if quote.is_bridge: return await self.bridge_from_quote(quote)\n",
     "\n",
     "        origin_quote, destination_quote = quote.origin_quote, quote.destination_quote\n",
     "\n",
@@ -411,9 +450,20 @@
     "        self.chain_for_writes = chain_for_writes\n",
     "        self.relayer = relayer or HTTPSuperswapRelayer()    \n",
     "\n",
+    "    async def bridge_from_quote(self, quote: SuperSwapQuote) -> str:\n",
+    "        assert quote.is_bridge, \"bridge_from_quote can only be used for bridge quotes\"\n",
+    "        self.check_chain_support(quote.from_token, quote.to_token)\n",
+    "        chain = self.chain_for_writes or get_async_chain_from_token(quote.from_token)\n",
+    "        if not chain.account: raise ValueError(\"Cannot bridge without an account. Please connect your wallet first.\")\n",
+    "        from_token, to_token, amount = quote.from_token, quote.to_token, quote.amount_in\n",
+    "        async with chain:\n",
+    "            tx = await chain._internal_bridge_token(from_token, to_token, amount, await get_domain_async(int(to_token.chain_id)))\n",
+    "            return f'0x{tx[\"transactionHash\"].hex()}'\n",
+    "\n",
     "    async def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
     "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "        if quote.is_bridge: return await self.bridge_from_quote(quote)\n",
     "        return await self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
     "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
@@ -422,6 +472,17 @@
     "        async with self.from_chain, self.to_chain:\n",
     "            self.origin_bridge_token = await self.from_chain.get_superswap_connector_token()\n",
     "            self.destination_bridge_token = await self.to_chain.get_superswap_connector_token()\n",
+    "\n",
+    "            # are we bridging?\n",
+    "            bridge_quote = self.get_bridge_quote(\n",
+    "                from_token=from_token,\n",
+    "                to_token=to_token,\n",
+    "                from_bridge=self.origin_bridge_token,\n",
+    "                to_bridge=self.destination_bridge_token,\n",
+    "                amount_in=amount_in\n",
+    "        )\n",
+    "\n",
+    "            if bridge_quote: return bridge_quote\n",
     "\n",
     "            # we only need origin quote if we don't start with oUSDT\n",
     "            if not self.starts_with_bridge_token:\n",
@@ -437,6 +498,8 @@
     "\n",
     "    async def swap_from_quote(self, quote: SuperSwapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
+    "\n",
+    "        if quote.is_bridge: return await self.bridge_from_quote(quote)\n",
     "\n",
     "        async with self.from_chain, self.to_chain:\n",
     "            if not self.from_chain.account: raise ValueError(\"Cannot superswap without an account. Please connect your wallet first.\")\n",
@@ -498,6 +561,42 @@
     "\n",
     "            tx = await chain.sign_and_send_tx(chain.swapper.functions.execute(*[cmds, inputs]), value=message_fee)\n",
     "            return self.prepare_result(swap_data, tx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29c2fad3",
+   "metadata": {},
+   "source": [
+    "## Tests\n",
+    "\n",
+    "A few local tests. Check `test_swaps.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddc727a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inittialied oUSDT -> oUSDT with amount 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sugar.chains import AsyncOPChain, AsyncLiskChain, AsyncOPChainSimnet, OPChainSimnet\n",
+    "from fastcore.test import test_eq\n",
+    "\n",
+    "from_token, to_token, amount = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt, 1\n",
+    "\n",
+    "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "test_eq(quote.is_bridge, True)\n",
+    "quote = Superswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "test_eq(quote.is_bridge, True)\n"
    ]
   },
   {
