--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -357,6 +357,10 @@
     "    origin_quote: Optional[Quote] = None\n",
     "    destination_quote: Optional[Quote] = None\n",
     "\n",
+    "    @property\n",
+    "    def is_bridge(self) -> bool:\n",
+    "        return self.from_token.token_address == self.from_bridge_token.token_address and self.to_token.token_address == self.to_bridge_token.token_address\n",
+    "\n",
     "@dataclass(frozen=True)\n",
     "class SuperSwapDataInput:\n",
     "    from_token: Token\n",
@@ -489,6 +493,7 @@
     "    destination_chain_planner = RoutePlanner()\n",
     "\n",
     "    # TODO: confirm this is OK (destination quote check)\n",
+    "    # i think this works because bridge -> bridge is handled in its own way\n",
     "    starts_with_bridge_token = (i.from_token.token_address == i.from_bridge_token.token_address) and d_quote is not None\n",
     "\n",
     "    # bridge command\n",
